add heading to lists

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
     <h1>This is exercise 1 for creating a display website with 6 images and 6 videos</h1>
+    <h2>Flower images that create your day : </h2>
     <img src="images/img1.jpg" width="300px" alt="flower1">
     <img src="images/img2.jpg" width="300px" alt="flower2">
     <img src="images/img3.jpg" width="300px" alt="flower3">
     <img src="images/img4.jpg" width="300px" alt="flower4">
     <img src="images/img5.jpg" width="300px" alt="flower5">
     <img src="images/img6.jpg" width="300px" alt="flower6">
+    <h2>Timers videos that lets you track your work in efficient manner : </h2>
     <video src="videos/vid1.mp4" height="255" controls muted ></video>
     <video src="videos/vid2.mp4" height="255" controls muted ></video>
     <video src="videos/vid3.mp4" height="255" controls muted ></video>
